[package]
name = "standart-part"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
anyhow       = "=1.0.75"
embedded-svc = "=0.28.0"
toml-cfg     = "=0.1.3"
log = "=0.4.20"
esp-idf-hal = { version = "0.44.1", default-features = false }
esp-idf-sys = { version = "0.35.0", default-features = false }
esp-idf-svc = "0.49.1"

[build-dependencies]
embuild  = "=0.32.0"
toml-cfg = "=0.1.3"
